refactor: run one model and tool loop